# api-unitech

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: Dockerfile  devcontainer.json  post_creation.sh
api/: app.py  main.py
api/main/controller/: geminiAIController.py  openAIController.py
api/main/routes/: routes.py
api/test/controller/: helloWorldController.py
api/test/routes/: routes.py
