[tool.poetry]
name = "api-unitech"
version = "0.2.0"
description = "Api for AI"
authors = ["toledkrw <matheusot.900009306@uniacademia.edu.br>", "reisrafaeldev <rafaelro.900022981@uniacademia.edu.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
google-generativeai = "^0.5.0"
pillow = "^10.3.0"
openai = "^1.19.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
